spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-core-k8s-client-it/src/test/resources/spring-cloud-kubernetes-core-k8s-client-it-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-core-k8s-client-it-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-core-k8s-client-it
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-core-k8s-client-it
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-core-k8s-client-it
          image: docker.io/springcloud/spring-cloud-kubernetes-core-k8s-client-it:2.0.2-SNAPSHOT
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
